--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.17.0",
     "@astrojs/react": "^2.2.1",
     "@astrojs/tailwind": "^3.1.3",
+    "@astrojs/vercel": "^3.5.0",
     "@fontsource/roboto": "^5.0.3",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
