--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.3",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
+    "aos": "^3.0.0-beta.6",
     "astro": "^2.6.6",
     "astro-icon": "^0.8.1",
     "framer-motion": "^10.12.16",
