--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/react": "^2.2.1",
     "@astrojs/tailwind": "^4.0.0",
     "@fontsource/roboto": "^5.0.3",
+    "@react-google-maps/api": "^2.18.1",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "aos": "^3.0.0-beta.6",
