--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^2.6.6",
     "astro-icon": "^0.8.1",
     "framer-motion": "^10.12.16",
+    "googleapis": "^121.0.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
