--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "astro-icon": "^0.8.1",
     "framer-motion": "^10.12.16",
     "hamburger-react": "^2.5.0",
+    "prettier-plugin-astro": "^0.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.1",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
