--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/react": "^2.2.1",
     "@astrojs/tailwind": "^4.0.0",
     "@fontsource/roboto": "^5.0.3",
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "airtable": "^0.12.1",
@@ -27,6 +28,7 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.53.4",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
