--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "astro": "^2.6.6",
     "astro-icon": "^0.8.1",
     "framer-motion": "^10.12.16",
+    "google-auth-library": "^8.9.0",
+    "google-spreadsheet": "^4.0.2",
+    "googleapis": "^122.0.0",
     "hamburger-react": "^2.5.0",
     "prettier-plugin-astro": "^0.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "whatwg-url": "^13.0.0"
   },
   "devDependencies": {
     "@types/google.maps": "^3.53.4",
